Fixed the sliders and added non visibility of current slider and saving of state

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -230,7 +230,7 @@ SUMMARY
   text-align: center
 }
 
-#summary #weightLabels span {
+#summary #weightLabels span.header {
   display: block;
   height: 20px;
   margin-bottom: 20px;
